--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,44 @@ html {
   overflow-x: hidden;
 }
 
+.first-task {
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.9);
+  color: white;
+  font-size: 1.5rem;
+  padding: 0.2rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  cursor: pointer;
+  display: none;
+}
+.first-task button {
+  font-size: 1.5rem;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+.first-task .button-active {
+  position: absolute;
+  font-size: 2rem;
+  top: 2rem;
+  right: 2rem;
+}
+
+.task-active {
+  padding: 1rem;
+  padding-left: 3rem;
+  width: 100vw;
+  font-size: 1.4rem;
+  font-weight: 100;
+  cursor: default;
+}
+
 .nav-bar {
   display: flex;
   justify-content: space-between;
@@ -29,6 +67,7 @@ html {
   font-size: 48px;
   font-weight: 700;
   letter-spacing: 1px;
+  text-transform: uppercase;
 }
 .nav-bar .mobile-menu {
   display: none;
@@ -40,6 +79,9 @@ html {
   list-style: none;
   font-size: 24px;
   font-weight: 500;
+}
+.nav-bar .menu .mobile-exit {
+  display: none;
 }
 .nav-bar .menu .option a {
   color: rgba(0, 0, 0, 0.72);
@@ -251,23 +293,37 @@ html {
   width: 38rem;
   grid-column-end: span 2;
 }
+.images .gallery-slider .second-page {
+  display: none;
+}
+.images .gallery-slider .third-page {
+  display: none;
+}
+.images .lightbox {
+  opacity: 0;
+  pointer-events: none;
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: grid;
+  place-items: center;
+}
 .images .pagination {
   display: flex;
   justify-content: center;
-  gap: 1rem;
+  gap: 16px;
   margin-top: 3rem;
 }
 .images .pagination .option {
-  height: 1rem;
-  width: 1rem;
+  height: 16px;
+  width: 16px;
   border-radius: 50%;
   border: none;
   background-color: #D9D9D9;
   cursor: pointer;
-  transition: background-color ease-in-out 0.1s;
-}
-.images .pagination .option:hover {
-  background-color: rgba(32, 68, 151, 0.6705882353);
 }
 .images .pagination .active {
   background-color: #204497;
@@ -358,7 +414,36 @@ html {
     font-size: 8px;
   }
   .nav-bar .menu {
-    display: none;
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.9);
+    width: 100%;
+    height: 13rem;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .nav-bar .menu .mobile-exit {
+    display: flex;
+    color: white;
+    font-size: 3rem;
+    position: absolute;
+    top: 0.5rem;
+    right: 1.5rem;
+    text-align: center;
+    cursor: pointer;
+  }
+  .nav-bar .menu .option {
+    padding-top: 4rem;
+  }
+  .nav-bar .menu .option a, .nav-bar .menu .option .current {
+    color: white;
+    font-size: 3rem;
+  }
+  .nav-bar .menu .option a:hover, .nav-bar .menu .option .current:hover {
+    color: white;
   }
   .nav-bar .mobile-menu {
     cursor: pointer;
@@ -382,6 +467,9 @@ html {
 @media only screen and (max-width: 400px) {
   html {
     font-size: 6px;
+  }
+  .nav-bar .menu {
+    height: 17.5rem;
   }
   .company-section {
     height: 1300px;
