--- a/styles.scss
+++ b/styles.scss
@@ -14,6 +14,46 @@ html{
     overflow-x: hidden;
 }
 
+.first-task{
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.9);
+    color: white;
+    font-size: 1.5rem;
+    padding: .2rem;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    cursor: pointer;
+    display: none;
+
+    button{
+        font-size: 1.5rem;
+        background: none;
+        border: none;
+        color: white;
+        cursor: pointer;
+    }
+
+    .button-active{
+        position: absolute;
+        font-size: 2rem;
+        top: 2rem;
+        right: 2rem;
+    }
+}
+
+.task-active{
+    padding: 1rem;
+    padding-left: 3rem;
+    width: 100vw;
+    font-size: 1.4rem;
+    font-weight: 100;
+    cursor: default;
+}
+
 .nav-bar{
     display: flex;
     justify-content: space-between;
@@ -29,6 +69,7 @@ html{
         font-size: 48px;
         font-weight: 700;
         letter-spacing: 1px;
+        text-transform: uppercase;
     }
 
     .mobile-menu{
@@ -42,6 +83,10 @@ html{
         list-style: none;
         font-size: 24px;
         font-weight: 500;
+
+        .mobile-exit{
+            display: none;
+        }
 
         .option{
             a{
@@ -282,26 +327,42 @@ html{
                 grid-column-end: span 2;
             }
         }
+
+        .second-page{
+            display: none;
+        }
+
+        .third-page{
+            display: none;
+        }
+    }
+
+    .lightbox{
+        opacity: 0;
+        pointer-events: none;
+        position: fixed;
+        top: 0;
+        z-index: 100;
+        height: 100vh;
+        width: 100vw;
+        background-color: rgba(0, 0, 0, 0.6);
+        display: grid;
+        place-items: center;
     }
 
     .pagination{
         display: flex;
         justify-content: center;
-        gap: 1rem;
+        gap: 16px;
         margin-top: 3rem;
 
         .option{
-            height: 1rem;
-            width: 1rem;
+            height: 16px;
+            width: 16px;
             border-radius: 50%;
             border: none;
             background-color: #D9D9D9;
             cursor: pointer;
-            transition: background-color ease-in-out .1s;
-
-            &:hover{
-                background-color: #204497ab;
-            }
         }
 
         .active{
@@ -367,23 +428,19 @@ html{
         width: 100%;
         padding: 0;
         margin: 0;
-
         .article{
             padding: 5rem;
             width: 100%;
         }
-        
         .company-imgs{
             width: 100%;
             position: relative;
             height: 1000px;
-
             .horizontal{
                 top: 0;
                 width: 155%;
                 height: auto;
             }
-
             .vertical{
                 top: 16rem;
                 right: 0;
@@ -413,7 +470,37 @@ html{
 
     .nav-bar{
         .menu{
-            display: none;
+            opacity: 0;
+            pointer-events: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: rgba(0, 0, 0, 0.9);
+            width: 100%;
+            height: 13rem;
+            justify-content: space-around;
+            align-items: center;
+            .mobile-exit{
+                display: flex;
+                color: white;
+                font-size: 3rem;
+                position: absolute;
+                top: .5rem;
+                right: 1.5rem;
+                text-align: center;
+                cursor: pointer;
+            }
+
+            .option{
+                padding-top: 4rem;
+                a, .current{
+                    color: white;
+                    font-size: 3rem;
+                    &:hover{
+                        color: white;
+                    }
+                }
+            }
         }
 
         .mobile-menu{
@@ -442,6 +529,13 @@ html{
 
 @media only screen and (max-width: 400px) {
     html{ font-size: 6px; }
+
+    .nav-bar{
+        .menu{
+            height: 17.5rem;
+        }
+        
+    }
 
     .company-section{
         height: 1300px;
